# commons

./: .coveragerc  .gitignore  .landscape.yml  .travis.yaml  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  bridge_common.spec  check_commit_msg.py  requirements.txt  run_travis.sh  setup.cfg  setup.py  tendrl-common.spec  tendrl-commons.spec  test-requirements.txt  tox.ini
.github/: CODEOWNERS
bridge_common/: config.py  exception.py  logging.py  validate_job_api.py  validateapi.py  validatesds.py
bridge_common/JobValidator/: api.py  exception.py
bridge_common/etcdobj/: __init__.py  etcdobj.py  fields.py  log.py
bridge_common/tests/: base.py  sds_state_gluster.yaml  sds_state_node.yaml  test_bridge_common.py  test_validate_api.py
dependencies/: Makefile  python-etcd.spec
dependencies/python-dns/: Makefile  python-dns.spec
dependencies/python-etcd/: 001-dnspython.patch  Makefile  python-etcd.spec
dependencies/python-maps/: Makefile  maps.spec  python-maps.spec
dependencies/python-namespaces/: 0001-Fix-python-six-dependency-version-issue.patch  Makefile  namespaces.spec
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: sds_description.yaml  tendrl.conf.sample
etc/patches/: 0001-minimum-rhgs-version-rhel7.patch
etc/samples/: atoms_generic.sample.yaml  flows_generic.sample.yaml  logging.yaml.journald.sample  logging.yaml.syslog.sample  logging.yaml.timedrotation.sample  node_agent_objects_generic.sample.yaml  sds_objects_generic.sample.yaml  tendrl_api_job.sample.json  (+2 more)
etc/tendrl/: tendrl.conf.sample
tendrl/: __init__.py
(+325 files in other folders)
