[metadata]
name = bridge_common
summary = Common code usable by all Tendrl SDS Bridges
description-file = 
	README.rst
author = Rohan Kanade
author-email = rkanade@redhat.com
home-page = http://www.tendrl.org/
classifier = 
	Environment :: Tendrl
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: LGPL-2.1
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.3
	Programming Language :: Python :: 3.4

[files]
packages = 
	bridge_common

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = bridge_common/locale
domain = bridge_common

[update_catalog]
domain = bridge_common
output_dir = bridge_common/locale
input_file = bridge_common/locale/bridge_common.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bridge_common/locale/bridge_common.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

